--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,12 +1,11 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #0D23AE
-$kaldi-red-invert: #fff
+$wths-blue: #0D23AE
+$wths-blue-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $wths-blue
+$primary-invert: $wths-blue-invert
 $body-color: #333
 $black: #2b2523
 
@@ -88,9 +87,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $wths-blue-invert
+$menu-item-active-background-color: $wths-blue-invert
+$menu-list-border-left: 1px solid $wths-blue-invert
 $menu-label-color: $white-ter
 
 
